[package]
name = "redis-rust"
version = "0.1.0"
authors = ["Gurwi30"]
description = "A redis clone, i was bored"
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
tokio = { version = "1.23.0", features = ["full"] }
strum = "0.26.3"
strum_macros = "0.26.4"